--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     //得到html的Dom元素
     let htmlDom = document.getElementsByTagName('html')[0];
     //设置根元素字体大小
+    if(htmlWidth>750){htmlWidth=750}
     htmlDom.style.fontSize = htmlWidth / 20 + 'px';
   </script>
 </body>
